app/assets/stylesheets/items.css.scss
// Place all the styles related to the Items controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.gallery{
  ul {
    padding:0 0 0 0;
    margin:0 0 0 0;
  }
  ul li {
    list-style:none;
    margin-bottom:25px;
  }
  ul li img {
    cursor: pointer;
  }
}
.thumbnail {
  position: relative;
  padding: 0px;
  margin-bottom: 20px;
  p, label, h1, h2, h3, h4, h5,th, td {
    color: #333333;
  }
}

//.thumbnail-image-div {
//  align-content: center;
//  height: 150px;
//  width: 200px;
//}
//
.thumbnail img {
  width: 100%;
  height: 100%;
}

.thumbnail_image_size {
  position: absolute;
  color: #222222;
  background-color: #eeeeee;
  padding: 2px;
  opacity: 0.75;
}

.short_box {
  width: 120px !important;
  margin-left: 75px;
}

